fixed styles that were causing overflow on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -131,13 +131,22 @@ ul {
 
 	/*INDEX-SPINNER*/
 		#loading {
-			visibility: hidden;
-			position: absolute;
-			top:200px;
-			left:400px; 
+			/*visibility: hidden;*/
+			
 			background-color: white;
 			padding:10px;
 			box-shadow: 0 0 5px rgba(0,0,0,.75);
+
+			height: 100%;
+			width: 100%;
+			box-sizing: border-box;
+			top: 0;
+			left: 0;
+
+			position: fixed;
+			display: flex;
+			align-items: center;
+			justify-content: center;
 		}
 	/*INDEX-TAGS*/
 		.tags {
